Refactor angular folder structure, add more rates-form

--- a/src/app/modules/dashboard/form-container/date-form/date-form.component.html
+++ b/src/app/modules/dashboard/form-container/date-form/date-form.component.html
@@ -4,7 +4,7 @@
       <label for="date">
         Date
       </label>
-      <input id="date" type="text" formControlName="dateInfo">
+      <input id="date" type="date" formControlName="dateInfo">
     </div>
     <button class="button" (click)="doChangeStep('back')">Back</button>
     <button class="button" type="submit">Sumbit</button>
